# webcomputing_web_app

./: Cargo.toml
src/: index.html  main.rs
src/dictionary_en/: i.txt  t.txt
src/dictionary_ger/: a.txt  b.txt  c.txt  d.txt  e.txt  f.txt  g.txt  h.txt  i.txt  j.txt  k.txt  l.txt  m.txt  n.txt  o.txt  p.txt  q.txt  r.txt  s.txt  t.txt  u.txt  v.txt  w.txt  x.txt  y.txt  z.txt  Ã.txt
